subindo novas funcionalidades

--- a/uploadimage/.env
+++ b/uploadimage/.env
@@ -1,3 +1,4 @@
 CLOUD_NAME = dzrx0mq9y
 API_KEY = 476383583397341
 API_SECRET = t2OkAaBrj35qnesEfxNCABaM774
+CLOUDINARY_URL=cloudinary://476383583397341:t2OkAaBrj35qnesEfxNCABaM774@dzrx0mq9y
